<resources>
    <!-- App details -->
    <string name="app_name">PortfolioBalancer</string>
    <!-- App titles -->
    <string name="title_portfolios">Portfolios</string>
    <string name="title_test_portfolio">TestPortfolio</string>
    <string name="title_main_activity">Portfolios</string>
    <string name="title_add_companies">Add companies</string>
    <string name="title_add_portfolio">Add portfolio</string>
    <string name="title_portfolio_settings">Portfolio settings</string>
    <string name="title_companies">Companies</string>

    <!-- Bottom Navigation Bar -->
    <string name="home_item_title">Home</string>
    <string name="companies_item_title">Companies</string>

    <!-- Main activity. -->
    <string name="unbalanced_label">Unbalanced</string>

    <!-- Portfolio Details. -->
    <string name="portfolio_value">Portfolio value</string>
    <string name="portfolio_gain_loss">Total gain/loss</string>

    <!-- Add portfolio activity. -->
    <string name="add_portfolio_name">Enter name</string>
    <string name="add_portfolio_description">Enter description</string>
    <string name="add_portfolio_amount">Enter amount to invest</string>
    <string name="next_btn">Next</string>

    <!-- Add company activity. -->
    <string name="search_for_company_hint">Search for a company</string>

    <!-- Portfolio settings activity. -->
    <string name="portfolio_name">Name</string>
    <string name="portfolio_description">Description</string>
    <string name="portfolio_amount">Amount</string>
    <string name="portfolio_details_title">Portfolio Details</string>
    <string name="target_percentages_title">Target Percentages</string>
    <string name="delete_btn_title">Danger zone</string>
    <string name="target_percentages_total">Total</string>
    <string name="rebalance_btn">Rebalance</string>
    <string name="balance_dialog_title">Balancing portfolio</string>
    <string name="balance_dialog_message">Please wait...</string>
    <string name="delete_company">Delete</string>
    <string name="delete_portfolio">Delete portfolio</string>

    <!-- Companies activity -->
    <string name="companies_btn">Add company</string>
    <string name="add_company_name">Enter name</string>
    <string name="add_company_code">Enter code</string>
    <string name="add_company_price">Enter price</string>
    <string name="update_companies_btn">Update companies</string>

    <!-- Companies details -->
    <string name="company_name_title">Name</string>
    <string name="company_price_title">Price</string>
    <string name="company_growth_title">Total gain/loss</string>
    <string name="company_target_percentage_title">Target percentage</string>
    <string name="company_number_units_title">Units</string>
</resources>
