<?xml version="1.0" encoding="utf-8"?>
<!-- #################################### Activity Add Portfolio #################################### -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_portfolio_activity.AddPortfolioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dip"
            android:orientation="vertical">

            <!-- Portfolio name -->
            <TextView
                android:id="@+id/add_portfolio_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/add_portfolio_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Portfolio name input -->
            <EditText
                android:id="@+id/add_portfolio_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:inputType="textPersonName" />

            <!-- Portfolio description -->
            <TextView
                android:id="@+id/add_portfolio_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/add_portfolio_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Portfolio description input -->
            <EditText
                android:id="@+id/add_portfolio_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:inputType="textShortMessage" />

            <!-- Portfolio investment amount -->
            <TextView
                android:id="@+id/add_portfolio_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/add_portfolio_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Portfolio investment amount input -->
            <EditText
                android:id="@+id/add_portfolio_amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:inputType="number" />

            <!-- Next button -->
            <Button
                android:id="@+id/add_portfolio_activity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_weight="1"
                android:text="@string/next_btn" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>