<?xml version="1.0" encoding="utf-8"?>
<!-- #################################### Activity Companies #################################### -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".companies_prices_activity.CompaniesPricesActivity"
    android:background="@color/colorMainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:background="@color/colorEntryBackground"
                android:orientation="vertical">

                <!-- Company code -->
                <TextView
                    android:id="@+id/companies_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add_company_code"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Company code input -->
                <EditText
                    android:id="@+id/companies_code_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:inputType="textShortMessage"
                    android:textAllCaps="true"/>

                <!-- Company name -->
                <TextView
                    android:id="@+id/companies_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add_company_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Company name input -->
                <EditText
                    android:id="@+id/companies_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:inputType="textPersonName"/>

                <!-- Companies price -->
                <TextView
                    android:id="@+id/companies_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add_company_price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Companies price input -->
                <EditText
                    android:id="@+id/companies_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:inputType="numberDecimal" />

                <!-- Add company button -->
                <Button
                    android:id="@+id/companies_add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:layout_weight="1"
                    android:textColor="@color/textColorHighlight"
                    android:background="@color/textColorAssetGrowth"
                    android:text="@string/companies_btn" />
            </LinearLayout>

                <!-- Companies List -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/companies_prices_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"
                    android:scrollbars="vertical"
                    android:background="@color/colorMainBackground">
                </android.support.v7.widget.RecyclerView>

                <!-- Updates Button -->
                <Button
                    android:id="@+id/update_companies_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_companies_btn"
                    android:background="@color/textColorAssetGrowth"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:textColor="@color/textColorHighlight"/>

                <!-- Main activity Button -->
                <Button
                    android:id="@+id/main_activity_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Portfolios" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>