<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    tools:context=".PortfolioSettingsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorEntryBackground"
            android:orientation="vertical"
            android:padding="20dip">

                <TextView
                    android:id="@+id/portfolio_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:text="Portfolio Details"
                    android:textColor="@color/textColorAssetGrowth"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/portfolio_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/add_portfolio_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/portfolio_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/portfolio_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/add_portfolio_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/portfolio_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:inputType="textShortMessage" />

                <TextView
                    android:id="@+id/portfolio_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/add_portfolio_amount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/portfolio_amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:inputType="number" />

            <TextView
                android:id="@+id/portfolio_target_percentages_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="Target Percentages"
                android:textColor="@color/textColorAssetGrowth"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/portfolios_target_percentages_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:scrollbars="vertical" >

            </android.support.v7.widget.RecyclerView>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/portfolio_target_percentage_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorAsset"
                    android:textSize="20sp"
                    android:text="100%"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/entry_portfolio_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/portfolio_target_percentage_total"
                    android:text="Total"
                    android:textColor="@color/textColorSubHeading"
                    android:textSize="9sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_company_activity_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/textColorAssetGrowth"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/textColorHighlight"
                    android:text="Next" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>